crates/biome_yaml_formatter/tests/specs/prettier/yaml/spec/spec-example-9-3-bare-documents.yml.snap
---
source: crates/biome_formatter_test/src/snapshot_builder.rs
info: yaml/spec/spec-example-9-3-bare-documents.yml
---

# Input

```yml
Bare
document
...
# No document
...
|
%!PS-Adobe-2.0 # Not the first line

```


# Error
```text
reformat: formatter output had syntax errors where input had none:
spec-example-9-3-bare-documents.yml:5:4 parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unexpected token.
  
    3 │ ...
    4 │ # No document # No document
  > 5 │ ...|
      │    ^
  > 6 │ %!PS-Adobe-2.0 # Not the first line
  > 7 │ 
      │ 
  
spec-example-9-3-bare-documents.yml:6:1 parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unexpected character `%`
  
    4 │ # No document # No document
    5 │ ...|
  > 6 │ %!PS-Adobe-2.0 # Not the first line
      │ ^
    7 │ 
  

```
